nova_tests/negative_capability/p53_let_literal_pattern.nv
// EXPECT_COMPILE_ERROR refutable pattern in `let`
//
// Plan 53: `let`-pattern должен быть irrefutable. Литерал — refutable
// (значение может не совпасть), для match-like нужен `if let` / `match`.

module negative_capability.p53_let_literal_pattern

test "literal pattern in ro — refutable" {
    ro 42 = 1 + 1
    assert(true)
}
